--- a/src/App.css
+++ b/src/App.css
@@ -13,23 +13,18 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
 }
 
-.leaflet-routing-container{
+/* .leaflet-routing-container{
   display: none;
+} */
+
+.leaflet-control{
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  background-color: white;
 }
 @keyframes App-logo-spin {
   from {
