--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "@flaticon/flaticon-uicons/css/all/all.css";
+@import "~@flaticon/flaticon-uicons/css/all/all";
 .App {
   text-align: center;
 }
@@ -34,6 +36,11 @@
   margin: .5rem;
   top: 20%;
   left: 30%;
+}
+
+.leaflet-right .leaflet-control{
+  margin-right:0% !important;
+  margin-top: 0% !important;
 }
 @keyframes App-logo-spin {
   from {
