--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import "@flaticon/flaticon-uicons/css/all/all.css";
 @import "~@flaticon/flaticon-uicons/css/all/all";
+
+
+
+
 .App {
   text-align: center;
 }
@@ -23,7 +27,7 @@
   display: none;
 }
 .leaflet-control {
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(77, 73, 73, 0.2);
   background-color: white;
 }
 .leaflet-left .leaflet-control {
@@ -37,9 +41,31 @@
 }
 .leaflet-top:has(.CenterControl) {
   top: auto;
-  bottom: 0;
+  bottom: 12px;
   left: 35%;
   right: auto;
+}
+.leaflet-popup {
+  bottom: 15px !important;
+}
+.leaflet-popup-content {
+  margin: 0 !important;
+  line-height: unset !important;
+  font-size: inherit !important;
+  min-height: unset !important;
+}
+.leaflet-popup-content-wrapper {
+  background: unset !important;
+  color: unset !important;
+  box-shadow: unset !important;
+}
+.leaflet-popup-content-wrapper {
+  padding: unset !important;
+  text-align: unset !important;
+  border-radius: unset !important;
+}
+.leaflet-popup-tip-container {
+  left: 53% !important;
 }
 @keyframes App-logo-spin {
   from {
@@ -49,3 +75,283 @@
     transform: rotate(360deg);
   }
 }
+
+.leaflet-popup-content-wrapper {
+  /*  padding :unset !important;
+  border-radius: 5px !important;
+  background-color: lightgray;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
+  background-color: initial;
+  box-shadow: initial;
+}
+
+.leaflet-popup-content {
+  direction: rtl;
+  width: 281px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 12px;
+  color: #333;
+  /*margin: 12px;*/
+  margin: 0;
+  padding: 0;
+}
+
+.popup-header {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.popup-row {
+  margin-bottom: 3px;
+  direction: rtl;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.popup-row-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  background-color: white;
+  border-radius: 4px 4px 0px 0px;
+  padding: 5px;
+  gap: 5px;
+  margin: 0;
+  margin-bottom: -1px;
+}
+.popup-row-title.popup-shop {
+  background-color: #00970a;
+  color: white;
+}
+.popup-shop i {
+  width: 30px;
+  height: 30px;
+  background-color: #29a831;
+  padding: 8px;
+  border-radius: 4px;
+}
+.popup-shop span {
+  background-color: white !important;
+  color: #00970a !important;
+}
+.popup-row-title span {
+  background-color: #e8e7fa;
+  padding: 4px 8px;
+  border-radius: 4px;
+  color: #695cfe;
+  font-size: 14px;
+  font-weight: 500;
+}
+.title-icon-container {
+  width: 30px;
+  height: 30px;
+  border: 2px solid #695cfe;
+  border-radius: 50%;
+  padding: 4px;
+  display: grid;
+  justify-items: center;
+  justify-content: center;
+  align-items: end;
+}
+.title-icons {
+  font-size: 20px;
+  font-weight: bold;
+  color: #695cfe;
+}
+.title-icon-num {
+  background-color: white !important;
+  font-size: 12px !important;
+  font-weight: bold !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: #695cfe !important;
+}
+
+.popup-detail {
+  overflow-y: auto;
+  padding: 3px;
+  height: auto;
+  max-height: 140px;
+  margin-bottom: 13px;
+}
+.popup-detail-custome {
+  background-color: white;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 0;
+  border-radius: 4px 0px 4px 4px;
+  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+}
+.shop-detail {
+  background-color: #00970a !important;
+  color: white !important;
+}
+.popup-label {
+  font-weight: bold;
+  margin-left: 3px;
+}
+.pupup-lable-custom {
+  display: flex;
+  gap: 14px;
+  margin: 3px;
+  align-items: flex-end;
+}
+.superscript-text {
+  border-left: 1px solid #cecece;
+  padding: 0px 16px 0px 16px;
+  font-size: 14px;
+  font-weight: 500;
+}
+.popup-row-custom {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between !important;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.popup-row-custom.row-shop {
+  background-color: #29a831 !important;
+  color: white !important;
+}
+.popup-row-icon-container {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+  margin-left: 5px;
+}
+
+.popup-row.mt-2 {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #ededed;
+  padding: 5px;
+  border-radius: 4px;
+}
+.active {
+  background-color: #695cfe;
+  color: white;
+  border-radius: 4px;
+}
+
+
+
+
+
+/* .top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--sidebar-color);
+  padding: 10px 20px;
+  /* border-radius: 10px; */
+  /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
+  /* position: absolute;
+  top: 0;
+  width: calc(100% - 320px);
+  left: 0;
+  height: 64px;
+  z-index: 1; */
+/* } */
+/*.top-header .colloct-submit {
+  border: none;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  cursor:pointer;
+background-position: center;
+transition: background 0.8s;
+} */
+
+  /* .top-header .colloct-submit:hover {
+      background: var(--primary-color) radial-gradient(circle, transparent 1%, var(--primary-color-light) 1%) center/15000%;
+  }
+
+  .top-header .colloct-submit:active {
+      background-color: var(--primary-color-light);
+      background-size: 100%;
+      transition: background 0s;
+  } */
+
+    /* .menu-icon-option li:hover {
+        color: var(--primary-color-light);
+    } */
+    /* .menu-icon-option i {
+        font-size: 16px;
+    } */
+    /* .menu-icon-option a {
+        padding-bottom: 4px;
+        text-decoration: none;
+        font-weight:500;
+    } */
+    /* .header-search {
+      position: relative;
+      margin-right: 10px;
+  } */
+  /* .header-search-input {
+      border-radius: var(--radius);
+      height: 32px;
+      border: none;
+      background-color: #e5e6e6;
+      width: 450px;
+      padding-right: 31px;
+  } */
+  /* .header-search-icon {
+      font-size: 18px;
+      color: var(--text-color);
+      cursor: pointer;
+      position: absolute;
+      right: 10px;
+      top: 3px;
+  } */
+  /* .menu-icon {
+    font-size: 14px;
+    color: var(--text-color);
+    cursor: pointer;
+    display: flex;
+    gap: 12px;
+    align-items: center;
+} */
+/* .setting {
+  position: relative;
+} */
+/* #filterDate {
+  width: 74px;
+  text-align: center;
+  border: none;
+} */
+/* .filter-date-border { */
+  /*border: 1px solid var(--toggle-color);*/
+  /* border-radius: var(--radius);
+  padding: 6px;
+  width: 117px;
+  height: 32px;
+  display: flex;
+  justify-content: space-around;
+} */
+
+/* .border-right {
+  border-right: 1px solid var(--toggle-color);
+  padding-right: 12px;
+} */
+/* .clr-alpha, .clr-alpha div, .clr-swatches button, .clr-preview:before, .clr-field button {
+  border-radius: 4px !important;
+}
+.coloris {
+  width: 27px;
+  cursor: pointer;
+  border-radius: var(--radius);
+} */
