--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .menu-icon-option {
+    @apply flex gap-[6px] items-center h-5;
+  }
+  .header {
+    width: calc(100% - 320px);
+  }
+  .border-right {
+    @apply pr-3 border-r border-r-togglecolor;
+  }
+  .onhover {
+    @apply text-hover bg-bodycolor rounded h-6 p-[5px];
+  }
+}
+
 body {
   margin: 0;
-  font-family: 'IranYekan' ,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "IranYekan", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -19,25 +35,25 @@ code {
   font-family: IranYekan;
   font-weight: normal;
   font-style: normal;
-  src: url('../public/font/Yekan.eot');
-  src: url('../public/font/Yekan.eot?#iefix') format('embedded-opentype'),
-    url('../public/font/Yekan.woff') format('woff'),
-    url('../public/font/Yekan.ttf') format('truetype');
+  src: url("../public/font/Yekan.eot");
+  src: url("../public/font/Yekan.eot?#iefix") format("embedded-opentype"),
+    url("../public/font/Yekan.woff") format("woff"),
+    url("../public/font/Yekan.ttf") format("truetype");
   font-display: swap;
 }
 
- /* Hide scrollbar for Chrome, Safari and Opera */
- .no-scrollbar::-webkit-scrollbar {
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
-.leaflet-container{
+.leaflet-container {
   font-family: IranYekan !important;
 }
-.leaflet-bar{
+.leaflet-bar {
   display: none !important;
 }
