--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,43 @@
   .onhover {
     @apply text-hover bg-bodycolor rounded h-6 p-[5px];
   }
+  .form-row {
+    @apply flex justify-between mt-3 gap-8;
+  }
+  .form-group {
+    @apply flex items-center w-full;
+  }
+  .guide-item {
+    @apply flex gap-1;
+  }
+  .settingLI {
+    transition: background 0.3s;
+  }
+  .active_li {
+    @apply bg-primarycolor text-bodycolor;
+  }
+  .setting-item {
+    @apply w-full mb-[6px] flex flex-row items-center;
+  }
+
+  .setting-item label {
+    @apply inline-block w-[43%] text-left;
+  }
+
+  .setting-item input[type="text"] {
+    @apply w-[100px] p-[5px] bg-labelsetting text-modalside rounded text-left;
+  }
+  .setting-item input[type="number"] {
+    @apply rounded h-7 min-w-[30px] max-w-[61px] bg-bodycolor ml-[6px] mr-[6px] pr-[6px] border-2 border-togglecolor;
+  }
+
+  .setting-item .unit {
+    @apply ml-[10px];
+  }
+
+  .setting-item select {
+    @apply p-[5px] bg-labelsetting border border-hover text-modalside rounded;
+  }
 }
 
 body {
@@ -56,4 +93,58 @@ code {
 }
 .leaflet-bar {
   display: none !important;
+}
+
+.switch {
+  position: relative;
+  display: inline-block !important;
+  width: 52px !important;
+  height: 26px;
+  margin-right: 5px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.switch-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border: 1px solid var(--body-color);
+}
+
+.switch-slider:before {
+  position: absolute;
+  content: "";
+  height: 25px;
+  width: 25px;
+  left: 0px;
+  bottom: -1px;
+  background-color: white;
+  transition: 0.4s;
+  border: 1px solid var(--body-color);
+}
+
+.settings-color-car {
+  background-color: #ff8343;
+  color: white;
+}
+
+input:checked + .switch-slider {
+  background-color: #2196f3;
+}
+
+input:focus + .switch-slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .switch-slider:before {
+  transform: translateX(26px);
 }
