--- a/src/index.css
+++ b/src/index.css
@@ -52,14 +52,25 @@
   .setting-item select {
     @apply p-[5px] bg-labelsetting border border-hover text-modalside rounded;
   }
-  .shadowMarker{
-    text-shadow: 0 0 1em black,0 0 0.5em black, 0px 0px 0.1em black;
+  .shadowMarker {
+    text-shadow: 0 0 1em black, 0 0 0.5em black, 0px 0px 0.1em black;
   }
 
   .notDriverSelect {
-    @apply w-[288px] h-[93px] border border-r-togglecolor rounded m-4 p-4 flex items-center justify-center cursor-pointer
-}
-
+    @apply w-[288px] h-[93px] border border-r-togglecolor rounded p-4 flex items-center justify-between cursor-pointer;
+  }
+  .drivers {
+    @apply w-[280px] fixed h-full top-16 bg-white text-black font-medium right-[320px] transition-shadow;
+  }
+  .profile-image {
+    @apply w-[50px] h-[50px] rounded-full mr-[10px] text-4xl p-[7px] border border-gray-400 text-black;
+  }
+  .heavy {
+    @apply bg-drivericon text-primarycolor border border-drivericonborder;
+  }
+  .light {
+    @apply bg-drivericonlight text-drivericonlightcolor border border-drivericonlightborder;
+  }
 }
 
 body {
@@ -87,14 +98,27 @@ code {
   font-display: swap;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
 }
-/* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(255, 255, 255, 0.3);
 }
 .leaflet-container {
   font-family: IranYekan !important;
