--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
   }
 
   .notDriverSelect {
-    @apply w-[288px] h-[93px] border border-r-togglecolor rounded p-4 flex items-center justify-between cursor-pointer;
+    @apply w-[288px] h-[93px] border border-togglecolor border-solid rounded p-4 flex items-center justify-between cursor-pointer;
   }
   .drivers {
     @apply w-[280px] fixed h-full top-16 bg-white text-black font-medium right-[320px] transition-shadow;
@@ -75,16 +75,81 @@
 
 body {
   margin: 0;
-  font-family: "IranYekan", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  font-family: "BonyadeKoodak","IranYekan", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;    
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+    direction:rtl;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+        content: '';
+        content: none;
+    }
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+@font-face {
+	font-family: BonyadeKoodak;
+	font-style: normal;
+	font-weight: normal;
+	src: url('../public/font/BonyadeKoodak-Regular.woff') format('woff');	 
+}
+
+@font-face {
+	font-family: BonyadeKoodak;
+	font-style: normal;
+	font-weight: 500;
+	src: url('../public/font/BonyadeKoodak-Medium.woff') format('woff');		 
+}
+
+@font-face {
+	font-family: BonyadeKoodak;
+	font-style: normal;
+	font-weight: bold;
+	src: url('../public/font/BonyadeKoodak-Bold.woff') format('woff'); 
 }
 
 @font-face {
